<resources>
    <string name="app_name">House of Arts</string>
    <string name="app_icon_description">AppIcon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="nif">NIF</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cc_type">Type</string>
    <string name="cc_number">Number</string>
    <string name="cc_validity">2018-12-31</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_cafetaria">Cafetaria</string>
    <string name="title_vouchers">Vouchers</string>
    <string name="purchase">Purchase Now</string>
    <string name="validity">Validity: </string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="menu">Menu</string>
    <string name="total">Total:</string>
    <string name="makeOrder">Make Order</string>
    <string name="freeCoffee">Free Coffee</string>
    <string name="freePopcorn">Free Popcorn</string>
    <string name="freeDiscount">5% Discount</string>
    <string name="coffe">Coffee</string>
    <string name="popcorn">Popcorn</string>
    <string name="sodaDrink">Soda drink</string>
    <string name="sandwich">Sandwich</string>
    <string name="select_vouchers">Select vouchers:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="seatNumber">Seat Number:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
