<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/register_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_icon_description"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_app" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_logo">

            <LinearLayout
                android:id="@+id/register_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_nif"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/nif"
                        android:inputType="number"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_cc_type"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/cc_type"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_cc_number"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/cc_number"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/register_title_validy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:hint="@string/cc_validity"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/validity"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/register_cc_datevalidity"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:hint="@string/cc_validity"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btn_register_main"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/register_inputs"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_primary_bg"
                android:fontFamily="sans-serif"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Button
                android:layout_below="@+id/btn_register_main"
                android:id="@+id/btn_login_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>