<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_item_product_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/app_icon_description"
        android:gravity="center_vertical"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_product_coffe" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="Food"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/list_item_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Food" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/list_item_product_btn_minus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/decrease"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_product_quantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:text="0" />

        <Button
            android:id="@+id/list_item_product_btn_plus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/increase"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>