<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_icon_description"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_product_coffe" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/coffe"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/coffe_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Food" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/coffee_minus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/decrease"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coffe_quantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:text="0" />

            <Button
                android:id="@+id/coffe_plus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/increase"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_icon_description"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_product_popcorn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/popcorn"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/popcorn_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Food" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/popcorn_minus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/decrease"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popcorn_quantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:text="0" />

            <Button
                android:id="@+id/popcorn_plus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/increase"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_icon_description"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_product_sodadrink" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/sodaDrink"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sodadrink_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Food" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sodadrink_minus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/decrease"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sodadrink_quantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:text="0" />

            <Button
                android:id="@+id/sodadrink_plus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/increase"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_icon_description"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_product_sandwich" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/sandwich"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sandwich_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Food" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sandwich_minus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/decrease"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sandwich_quantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:text="0" />

            <Button
                android:id="@+id/sandwich_plus"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/increase"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="0 €"
            android:textSize="16sp"
            android:gravity="end" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_make_order"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/makeOrder"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>